@@ -61,7 +61,7 @@
    "provides" : {
       "Dancer::Plugin::Auth::Tiny" : {
          "file" : "lib/Dancer/Plugin/Auth/Tiny.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       }
    },
    "release_status" : "stable",
@@ -76,6 +76,6 @@
          "web" : "https://github.com/dagolden/dancer-plugin-auth-tiny"
       }
    },
-   "version" : "0.001"
+   "version" : "0.002"
 }
 
